releases/prod/verdaccio.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: oauth2-proxy
  namespace: infrastructure
  annotations:
        kubernetes.io/ingress.class: nginx
        kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: verdaccio.sdp.handlel.app
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - verdaccio.sdp.handlel.app
    secretName: verdaccio-sdp-handlel-app-tls
